libcaldav (0.6.0)
  * Refactored to properly handle URL schema. Also fixes bug 2985320
  * More accurate error message in case of unresolable host or unable
    to get a connection. fixes feature request 2985321
  * Added support for FREEBUSY search
  * Fix bug 3003201. Solution provided by Dmitry Savenko

-- Michael Rasmussen <mir@datanom.net>  Mon, 12 Apr 2010 12:15:03 +0100

libcaldav (0.5.2)
  * Added a unit like testing framework
  * Make the use of locking configurable
  * Extend testing framework to test for this

-- Michael Rasmussen <mir@datanom.net>  Thu, 8 Apr 2010 12:15:03 +0100

libcaldav (0.5.1)
  * Honor request 2981083. Implement a response_free function
  * Honor request 2981100. Implement a runtime_info creation function
  * Fix bug 2981096. A number of memory leaks
  * Complete refactoring. Implement basic setup of curl instance in a
    function which all other function uses to ease maintainability and
    simplicity and to reduce the number of repeated code lines.

-- Michael Rasmussen <mir@datanom.net>  Sat, 3 Apr 2010 03:29:03 +0100

libcaldav (0.5.0)
  * Make library thread-safe. Close bug 2971102.
  * Changed test application accordingly.
  * Fix a number of memory leaks.
  * Fix a number of double frees.
  * fix regression introduced in revision 9 which broke locking
    in delete and modify.
  * Enhanced the error reporting for lock requests.
  * Fix some potential memory leaks.
  * Fix bug in parsing URL for username and password.
  * Fix pedantic behaviour from Google which chokes on URL's
    containing //
  * Fix bug so that get_etag also is able to handle namespace
    prefix for finding etags

-- Michael Rasmussen <mir@datanom.net>  Sat, 27 Mar 2010 03:27:03 +0100

libcaldav (0.4.2)
  * Fix bug so that SSL specific settings are actually used.
    Close bug 2971096.
  * Fix bug so is-caldav and options are handled correct
  * Applied help for new SSL settings to test application
