@@ -101,6 +101,7 @@ gboolean caldav_add(caldav_settings* settings, caldav_error* error) {
 	curl_easy_setopt (curl, CURLOPT_POSTFIELDSIZE, strlen(settings->file));
 	curl_easy_setopt(curl, CURLOPT_CUSTOMREQUEST, "PUT");
 	curl_easy_setopt(curl, CURLOPT_FOLLOWLOCATION, 1);
+	curl_easy_setopt(curl, CURLOPT_UNRESTRICTED_AUTH, 1);
 	curl_easy_setopt(curl, CURLOPT_POSTREDIR, CURL_REDIR_POST_ALL);
 	res = curl_easy_perform(curl);
 	if (res != 0) {
